# zulip_bots

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  kita.zuliprc  pyproject.toml
bots/: __init__.py  kita.py  message.py  parrot.py  parser.py
bots/arxiv/: __init__.py  arxiv.py  main.py  requests.py
bots/kita/: __init__.py  kita.py  main.py
