[tool.poetry]
name = "zulip-bots"
version = "0.1.0"
description = "Bots for zulip"
authors = ["Georgios Arampatzis <georgios.arampatzis@uoc.gr>"]
readme = "README.md"
packages = [
  {include = "bots"}
]

[tool.poetry.dependencies]
python = "^3.11"
zulip = "^0.9.0"
openai = "^1.93.2"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pretty-errors = "^1.2.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
parrot = "bots.parrot:main"
kita = "bots.kita:main"