[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Georgios Arampatzis <georgios.arampatzis@uoc.gr>"]
description = "Bots for zulip"
name = "zulip-bots"
packages = [
  {include = "bots"}
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
openai = "^1.93.2"
pre-commit = "^4.2.0"
python = "^3.11"
python-dotenv = "^1.1.1"
zulip = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pretty-errors = "^1.2.25"

[tool.poetry.scripts]
kita = "bots.kita:main"
parrot = "bots.parrot:main"
